# ChangeLog for net-wireless/bluez-utils
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-utils/ChangeLog,v 1.86 2007/05/11 16:02:59 betelgeuse Exp $

*bluez-utils-3.10 (11 May 2007)

  11 May 2007; Petteri Räty <betelgeuse@gentoo.org> metadata.xml,
  +bluez-utils-3.10.ebuild:
  Version bump with new alsa and hal use flags. Fixes bug #143154. Take
  maintainership.

  09 May 2007; Stefan Schweizer <genstef@gentoo.org>
  bluez-utils-2.25-r1.ebuild:
  Fix missing binaries thanks Werner Meisner <weme23@gmx.net> in bug 149907

  13 Feb 2007; Marcus D. Hanwell <cryos@gentoo.org>
  bluez-utils-2.25-r1.ebuild:
  Stable on amd64.

  10 Feb 2007; <genstef@gentoo.org> bluez-utils-2.24.ebuild,
  bluez-utils-2.25-r1.ebuild:
  Remove udev useflag, bug 158114

  15 Jan 2007; Olivier Crête <tester@gentoo.org>
  +files/bluez-utils-2.25-dinovo-mdl.patch, bluez-utils-2.25-r1.ebuild:
  Add patch for newer logitech BT equipement, fixes bug #144547

  28 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  bluez-utils-2.25-r1.ebuild:
  Stable on hppa

  22 Aug 2006; Alastair Tse <liquidx@gentoo.org> -bluez-utils-2.25.ebuild:
  removing older ebuilds

  22 Aug 2006; Alastair Tse <liquidx@gentoo.org> -files/2.10-r1/pin,
  -files/2.10-r1/pin-helper.sh, -files/2.15-bluepin.patch,
  -files/bluez-utils-2.3-bluepin.patch, -files/2.16/bluetooth.rc,
  -files/bluez-utils-2.3-bluepin-gtk2.patch,
  -files/bluez-utils-2.3-rfcomm_fflush.patch,
  -files/bluez-utils-2.10-handsfree.patch, -files/2.10-r1/bluetooth.rc:
  cleaning out files/

  18 Jul 2006; Michael Hanselmann <hansmi@gentoo.org>
  bluez-utils-2.25-r1.ebuild:
  Stable on ppc.

  26 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  bluez-utils-2.25-r1.ebuild:
  Stable on sparc

  25 Jun 2006; Alin Nastac <mrness@gentoo.org> bluez-utils-2.25-r1.ebuild:
  Stable on x86 (#122262).

  19 Jun 2006; Henrik Brix Andersen <brix@gentoo.org>